k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web
  namespace: ecommerce 
  labels:
    app: django-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-web
  template:
    metadata:
      labels:
        app: django-web
    spec:
      #serviceAccountName: django-serviceaccount   # create IRSA linked service account separately
      containers:
        - name: web
          image: 138973099853.dkr.ecr.ap-south-1.amazonaws.com/django-ecom:local-1765515290   # e.g. 123456789012.dkr.ecr.ap-south-1.amazonaws.com/django-ecom:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/   # implement health endpoint or root
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
